# animutools

./: .gitignore  .pre-commit-config.yaml  README.md  allanime.py  concatvids.py  config.yaml  fenc  multiboxfetch.py  nyaasearch.py  pyproject.toml
src/animutools/: __init__.py  cli.py  core.py  progress.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_core.py  test_progress.py
tests/fake_ffmpeg/: __init__.py  fake_ffmpeg.py
