[project]
name = "animutools"
version = "0.1.0"
description = "Tools for encoding anime videos with ffmpeg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "more-itertools>=10.6.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fenc = "animutools.cli:main"
