[project]
name = "animutools"
version = "0.1.0"
description = "Tools for encoding anime videos with ffmpeg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "more-itertools>=10.6.0",
    "tqdm>=4.67.1",
    "rich>=13.4.2",
    "guessit>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
    "pre-commit>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fenc = "animutools.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
